--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -190,6 +190,8 @@
             width: 280px
         &__heading
             margin-bottom: 37px
+        &__text
+            min-width: 100%
     .subscribe
         &__input
             padding-left: 20px
