--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -24,12 +24,17 @@
         font-weight: 300
         font-size: 24px
         line-height: 30px
+        max-width: 100%
     &__heading
         font-weight: 600
         font-size: 36px
         line-height: 45px
         text-transform: uppercase
         display: block
+        max-width: 100%
+    &__text
+        max-width: 42%
+        word-wrap: break-word
 .subscribe
     width: 350px
     min-height: 55px
@@ -49,10 +54,12 @@
         top: 0
         right: 0
         border: none
-        width: 65px
+        padding: 0 18px
+        max-width: 40%
         height: 100%
         color: $light
         cursor: pointer
         font-weight: bold
         font-size: 12px
         line-height: 15px
+        overflow: hidden
